css/main.css
/*
|------------------------------------------
|  Global Styles
|------------------------------------------
*/
body {
    font-family: 'ABeeZee', sans-serif; 
}

.theme-wrapper {
    overflow: hidden;
    max-width: 100%;
}

section {
    padding: 10vw;
}

.form-control {
    border: none;
    background: transparent;
    border-bottom: 3px solid #87b900;
}

.form-control:focus {
    background: transparent;
}

label {
    color: rgb(114, 114, 114);
}

.bg-center {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    height: 100vh;
}

/*
|------------------------------------------
|  Buttons/Links
|------------------------------------------
*/
.btn {
    background: #87B900;
    border: 2px solid black;
    border-radius: 0.6rem;
    transition: all .35s ease;
}

.btn:hover {
    background: #edf5d7;
}

/*
|------------------------------------------
|  Typography
|------------------------------------------
*/
h1, h2, h3, h4, .btn, .navbar-brand {
    font-family: 'Chelsea Market', cursive;
    text-align: center;
}

/*
|------------------------------------------
|  Header
|------------------------------------------
*/
.navbar {
    will-change: top;
    transition: top .3s ease;
    box-shadow: -1px 3px 10px 0px rgba(155, 155, 155, 0.1);
    background: #F8FBF0;
}

.navbar.nav-up {
    top: -100px;
    box-shadow: none;
}

/*
|------------------------------------------
|  Banner
|------------------------------------------
*/
#bnr-carousel .carousel-cell {
    width: 100%;
}
#bnr-carousel .flickity-page-dots {
    bottom: 10vh;
}

.bnr .green-tea{
    background-image: url('../img/mockup/green-tea-comp.jpg');
}
.bnr .lemon{
    background-image: url('../img/mockup/lemon-comp.jpg');
}
.bnr .watermelon{
    background-image: url('../img/mockup/watermelon-comp.jpg');
}

/*
|------------------------------------------
|  Ingredients
|------------------------------------------
*/
.ingredients .carousel-cell img {
    width: 50%;
}

.ingredients .honey {
    position: relative;
    left: 10%;
}

.ingredients .carousel-cell {
    width: 40%;
    min-width: 215px;
    padding: 10px;
}

.ingredients .flickity-slider {
    display: flex;
    align-items: flex-end;
}

.flickity-page-dots .dot {
    background: #9bc961;
}

/* enable Flickity */
.carousel:after {
    content: "flickity";
    display: none; /*hide :after*/
}

@media (min-width: 576px) {
    /* disable Flickity for screen larger than 576px */
    .carousel:after {
        content: '';
    }
}


/*
|------------------------------------------
|  Stores
|------------------------------------------
*/
.stores li img {
    max-width: 100%;
}
/*
|------------------------------------------
|  Footer
|------------------------------------------
*/

.ftr {
    background: #F8FBF0;
}
.ftr a {
    color: rgb(49, 49, 49);
}
.copyright li:last-child::before {
    content: '|';
    padding: 0 5px;
}

/*
|------------------------------------------
|  Modal
|------------------------------------------
*/

.modal {
    background: rgba(0, 0, 0, 0.3);
}

.modal .modal-content {
    flex-direction: row;
}

.modal .col-left {
    background: rgb(237,242,223);
    background: linear-gradient(90deg, rgb(225, 234, 200) 0%, rgb(207, 215, 186) 100%);
}

.modal-dialog {
    max-width: 75%;
}

.modal .col-left img {
    max-width: 100%;
}
.modal strong {
    color: #87B900;
}


/*
|------------------------------------------
|------------------------------------------
|------------------------------------------
|  Media Queries
|------------------------------------------
|------------------------------------------
|------------------------------------------
*/

@media (min-width: 576px){
    .ingredients .carousel {
        display: flex;
        --bs-gutter-x: 1.5rem;
        --bs-gutter-y: 0;
        display: flex;
        flex-wrap: wrap;
        margin-top: calc(-1 * var(--bs-gutter-y));
        margin-right: calc(-0.5 * var(--bs-gutter-x));
        margin-left: calc(-0.5 * var(--bs-gutter-x));
        align-items: flex-end;
        justify-content: center;
    }

    /* 2 columns */
    .ingredients .carousel-cell {
        flex: 0 0 auto;
        width: 50%;
    }

    .carousel-cell p {
        max-width: 202px;
        margin: 0 auto;
    }
}

/* md: TABLET */
@media (min-width:768px){
    .policy-list {
        justify-content: flex-end;
    }
}

@media (min-width: 1106px) {

    /* 4 columns */
    .ingredients .carousel-cell {
        flex: 0 0 auto;
        width: 25%;
    }
}

